--- a/code/workbook.ipynb
+++ b/code/workbook.ipynb
@@ -370,6 +370,7 @@
     "    for epoch in range(num_epochs):\n",
     "        running_loss = 0.0\n",
     "        running_acc = 0.0\n",
+    "        model.train()\n",
     "\n",
     "        for i, (spectro, labels) in enumerate(train_loader, 0):\n",
     "            spectro = spectro.to(device)\n",
