--- a/code/xresnet1d_fetal.ipynb
+++ b/code/xresnet1d_fetal.ipynb
@@ -290,7 +290,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3415, 12, 256) (854, 12, 256) (3415,) (854,)\n"
+      "(2679, 12, 256) (670, 12, 256) (2679,) (670,)\n"
      ]
     }
    ],
@@ -354,9 +354,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of signals in a training set is:  3420\n",
-      "The number of signals in a test set is:  860\n",
-      "The number of batches per epoch is:  342\n"
+      "The number of signals in a training set is:  2680\n",
+      "The number of signals in a test set is:  670\n",
+      "The number of batches per epoch is:  268\n"
      ]
     }
    ],
@@ -519,7 +519,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Rahal\\AppData\\Local\\Temp\\ipykernel_8876\\1072320880.py:25: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "C:\\Users\\Rahal\\AppData\\Local\\Temp\\ipykernel_272\\1072320880.py:25: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
       "  outputs = F.softmax(model(spectro))\n"
      ]
     },
@@ -527,14 +527,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1,   100] loss: 1.240\n",
-      "[1,   200] loss: 1.188\n",
-      "[1,   300] loss: 1.200\n",
-      "For epoch 1 the test accuracy over the whole test set is 0 %\n",
-      "[2,   100] loss: 1.196\n",
-      "[2,   200] loss: 1.204\n",
-      "[2,   300] loss: 1.178\n",
-      "For epoch 2 the test accuracy over the whole test set is 0 %\n"
+      "[1,   100] loss: 1.297\n",
+      "[1,   200] loss: 1.278\n",
+      "For epoch 1 the test accuracy over the whole test set is 36 %\n",
+      "[2,   100] loss: 1.270\n",
+      "[2,   200] loss: 1.249\n",
+      "For epoch 2 the test accuracy over the whole test set is 60 %\n",
+      "[3,   100] loss: 1.229\n",
+      "[3,   200] loss: 1.227\n",
+      "For epoch 3 the test accuracy over the whole test set is 61 %\n",
+      "[4,   100] loss: 1.170\n"
      ]
     },
     {
@@ -574,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
